[package]
name = "emote_counter_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
dotenv = "0.15.0"
env = "0.0.0"
env_logger = "0.9.1"
lazy_static = { version = "1.4.0", features = ["spin"] }
load-dotenv = "0.1.2"
log = "0.4.17"
regex = "1.7.1"
rusqlite = "0.28.0"
serenity = { version = "0.11.5", features = ["cache"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread"] }
